Update Lynxx_English.resx (POEditor.com)

--- a/Lynxx_English.resx
+++ b/Lynxx_English.resx
@@ -1182,4 +1182,8 @@
   <data name="btnCleanupSettings" xml:space="preserve">
     <value>Settings - Cleanup VRN</value>
   </data>
+  <data name="btnCleanupSettingsTest" xml:space="preserve">
+    <value></value>
+  </data>
+
 </root>
